--- a/.github/workflows/golint.yml
+++ b/.github/workflows/golint.yml
@@ -21,4 +21,4 @@ jobs:
       - uses: golangci/golangci-lint-action@3a919529898de77ec3da873e3063ca4b10e7f5cc # v3.7.0
         with:
           version: 'v1.54.2'
-          args: -v
+          args: -v --timeout 5m --skip-dirs vendor
