--- a/.azdo/build-pipeline.yml
+++ b/.azdo/build-pipeline.yml
@@ -230,7 +230,7 @@ stages:
           - task: GitHubRelease@1
             displayName: "Draft Github Release"
             inputs:
-              gitHubConnection: 'Azure'
+              gitHubConnection: 'azapi2azurerm'
               repositoryName: '$(Build.Repository.Name)'
               action: 'create'
               target: '$(Build.SourceVersion)'
