try to fix windows esrp signing

--- a/.azdo/build-pipeline.yml
+++ b/.azdo/build-pipeline.yml
@@ -75,6 +75,11 @@ stages:
               OS: $(OS)
               ARCH: $(ARCH)
               VERSION: ${{ parameters.version }}
+          - task: UseDotNet@2
+            displayName: 'Install .NET SDK'
+            inputs:
+              packageType: 'sdk'
+              version: '3.x'
           - task: EsrpCodeSigning@1
             displayName: "Sign Binary (Windows Only)"
             condition: eq(variables.OS, 'windows')
