try to fix windows esrp signing

--- a/.azdo/build-pipeline.yml
+++ b/.azdo/build-pipeline.yml
@@ -178,6 +178,11 @@ stages:
             displayName: "Prepare Binary Archives & Digests"
             env:
               VERSION: ${{ parameters.version }}
+          - task: UseDotNet@2
+            displayName: 'Install .NET SDK'
+            inputs:
+              packageType: 'sdk'
+              version: '3.x'
           - task: EsrpCodeSigning@1
             displayName: "Sign Binary Archive Digests"
             inputs:
