try to fix build-pipeline

--- a/.azdo/build-pipeline.yml
+++ b/.azdo/build-pipeline.yml
@@ -249,3 +249,5 @@ stages:
               assets: '$(system.defaultWorkingDirectory)/release/*'
               isDraft: true
               addChangeLog: false
+              releaseNotesSource: inline
+              releaseNotesInline: 'terraform-provider-modtm'
