add timeout to provider reading default endpoint, try to fix pipeline

--- a/.azdo/build-pipeline.yml
+++ b/.azdo/build-pipeline.yml
@@ -169,7 +169,7 @@ stages:
                 fi
                 chmod +x dist/${OS}-${ARCH}/${name}${ext}
                 mv dist/${OS}-${ARCH}/${name}${ext} dist/${OS}-${ARCH}/${name}_${VERSION}${ext}
-                zip -j release/${NAME}_${VERSION}_${OS}_${ARCH}.zip dist/${OS}-${ARCH}/${name}_${VERSION}${ext}
+                zip -j release/${NAME}_${VERSION#v}_${OS}_${ARCH}.zip dist/${OS}-${ARCH}/${name}_${VERSION}${ext}
               done
 
               cd release
