--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,6 +61,7 @@ jobs:
           - '1.3.*'
           - '1.4.*'
           - '1.5.*'
+          - '1.6.*'
     steps:
       - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
       - uses: actions/setup-go@93397bea11091df50f3d7e59dc26a7711a8bcfbe # v4.1.0
@@ -74,5 +75,8 @@ jobs:
       - run: go mod download
       - env:
           TF_ACC: "1"
-        run: go test -v -cover ./internal/provider/
+          CHAOS: "1"
+        run: |
+          docker run -d --rm --network=host ghcr.io/shopify/toxiproxy
+          go test -v -cover ./internal/provider/
         timeout-minutes: 120
