--- a/.github/workflows/gosec.yml
+++ b/.github/workflows/gosec.yml
@@ -13,6 +13,10 @@ jobs:
     name: gosec
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-go@cdcb36043654635271a94b9a6d1392de5bb323a7 # v5.0.1
+        with:
+          go-version-file: 'go.mod'
+
       - name: Checkout Source
         uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
 
