--- a/.github/workflows/gosec.yml
+++ b/.github/workflows/gosec.yml
@@ -22,6 +22,6 @@ jobs:
           go-version-file: 'go.mod'
 
       - name: Run Gosec Security Scanner
-        uses: securego/gosec@6fbd381238e97e1d1f3358f0d6d65de78dcf9245 # v2.20.0
+        uses: securego/gosec@2ae137abcf405533ad6e549e9363e58e4f6e8b7d # Update to go versions to 1.21.11 and 1.22.4
         with:
           args: './...'
