update ado esrp signing config

--- a/.azdo/build-pipeline.yml
+++ b/.azdo/build-pipeline.yml
@@ -80,11 +80,16 @@ stages:
             inputs:
               packageType: 'sdk'
               version: '3.x'
-          - task: EsrpCodeSigning@1
+          - task: EsrpCodeSigning@5
             displayName: "Sign Binary (Windows Only)"
             condition: eq(variables.OS, 'windows')
             inputs:
-              ConnectedServiceName: "ESRP Signing Service"
+              ConnectedServiceName: '$(ESRPServiceConnectionName)'
+              AppRegistrationClientId: '$(ESRPAppClientId)'
+              AppRegistrationTenantId: '$(ESRPAppTenantId)'
+              AuthAKVName: '$(ESRPKVName)'
+              AuthCertName: '$(ESRPAuthCertName)'
+              AuthSignCertName: '$(ESRPSignCertName)'
               FolderPath: "$(system.defaultWorkingDirectory)/build"
               Pattern: "*.exe"
               signConfigType: "inlineSignParams"
@@ -183,10 +188,15 @@ stages:
             inputs:
               packageType: 'sdk'
               version: '3.x'
-          - task: EsrpCodeSigning@1
+          - task: EsrpCodeSigning@5
             displayName: "Sign Binary Archive Digests"
             inputs:
-              ConnectedServiceName: "ESRP Signing Service"
+              ConnectedServiceName: '$(ESRPServiceConnectionName)'
+              AppRegistrationClientId: '$(ESRPAppClientId)'
+              AppRegistrationTenantId: '$(ESRPAppTenantId)'
+              AuthAKVName: '$(ESRPKVName)'
+              AuthCertName: '$(ESRPAuthCertName)'
+              AuthSignCertName: '$(ESRPSignCertName)'
               FolderPath: "$(system.defaultWorkingDirectory)/release"
               Pattern: "*_SHA256SUMS.sig"
               signConfigType: "inlineSignParams"
