--- a/.github/workflows/gosec.yml
+++ b/.github/workflows/gosec.yml
@@ -22,6 +22,6 @@ jobs:
           go-version-file: 'go.mod'
 
       - name: Run Gosec Security Scanner
-        uses: securego/gosec@2ae137abcf405533ad6e549e9363e58e4f6e8b7d # Update to go versions to 1.21.11 and 1.22.4
+        uses: securego/gosec@43fee884f668c23601e0bec7a8c095fba226f889 # v2.22.1
         with:
           args: './...'
