--- a/.azdo/build-pipeline.yml
+++ b/.azdo/build-pipeline.yml
@@ -79,8 +79,8 @@ stages:
             displayName: 'Install .NET SDK'
             inputs:
               packageType: 'sdk'
-              version: '3.x'
-          - task: EsrpCodeSigning@5
+              version: "6.x"
+          - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@5
             displayName: "Sign Binary (Windows Only)"
             condition: eq(variables.OS, 'windows')
             inputs:
@@ -187,8 +187,8 @@ stages:
             displayName: 'Install .NET SDK'
             inputs:
               packageType: 'sdk'
-              version: '3.x'
-          - task: EsrpCodeSigning@5
+              version: "6.x"
+          - task: SFP.build-tasks.custom-build-task-1.EsrpCodeSigning@5
             displayName: "Sign Binary Archive Digests"
             inputs:
               ConnectedServiceName: '$(ESRPServiceConnectionName)'
