--- a/.github/workflows/module-test.yml
+++ b/.github/workflows/module-test.yml
@@ -18,6 +18,7 @@ jobs:
   module-acceptance-test:
     name: Module Acceptance Test
     runs-on: ubuntu-latest
+    environment: test
     steps:
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #v4.2.2
