--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -80,5 +80,12 @@ jobs:
           CHAOS: "1"
         run: |
           docker run -d --rm --network=host ghcr.io/shopify/toxiproxy
-          go test -v -cover ./internal/provider/
+          coverage=$(go test -v -cover ./internal/provider/ | grep "coverage:" | awk '{print $2}' | sed 's/%//')
+          echo $coverage
+          if [[ $(echo "$coverage < 80" | bc -l) -eq 1 ]]; then
+            echo "Total coverage is lower than 80% ($coverage%). Failing the test."
+            exit 1
+          else
+            echo "Total coverage is $coverage%, which is greater than or equal to 80%. Test passed."
+          fi
         timeout-minutes: 120
